add nasdaq chart

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
   </h2>
 </div>
 
+<div style="width: 100%; height: 800px;">
+    <iframe 
+        src="assets/visualizations/nasdaq_performance.html" 
+        width="100%" 
+        height="100%" 
+        frameborder="0" 
+        scrolling="no">
+    </iframe>
+</div>
+
 <div class="hero-intro animate-intro" id="intro">
     <p class="intro-label">The Pulse of the Market</p>
     <p class="intro-text">
